# correlationplus

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST  MANIFEST.in  README  README.md  correlationPlus.py  correlationplus.ipynb  pyproject.toml  requirements.txt  setup.py
Docker/: Dockerfile  Dockerfile-0.1.9  Dockerfile-0.2.0
correlationPlus/: __init__.py  calculate.py  centralityAnalysis.py  correlationPlus.py  diffMap.py  mapAnalysis.py  visualize.py
correlationPlus/scripts/: __init__.py  calculate.py  centralAnalysis.py  correlationPlus.py  diffMap.py  mapAnalysis.py  visualizemap.py
correlation_plus/: __init__.py  correlationPlus.py  diffMap.py
correlation_plus/scripts/: centralAnalysis.py  correlationPlus.py  diffMap.py  mapAnalysis.py
correlationplus/: __init__.py  calculate.py  centralityAnalysis.py  pathAnalysis.py  visualize.py
correlationplus/scripts/: __init__.py  analyze.py  calculate.py  centralAnalysis.py  correlationplus.py  diffMap.py  paths.py  visualize.py  visualizemap.py
docs/: conf.py  correlationplus.rst  correlationplus.scripts.rst  index.rst  installation.rst  license.rst  modules.rst  quickstart.rst
examples/: 6lu7_dimer_with_N3_protein_sim1_ca_short.trr  crn.enm  example_api_usage.py  example_script.sh  example_script_v0.2.1.sh  example_script_v0.2.2.sh
src/: __main__.py  __main__.py~  correlationPlus.py  correlationPlus.py~  diffMap.py
tests/: run-tests.py  run-tests.py~
